--- a/style.css
+++ b/style.css
@@ -5,9 +5,17 @@
 #Nav {
 	width: 100%;
 	height: 75px;
-	background-color: #080808;
+	background-color: #191919;
 }
 
 #Index {
 	width: 100%;
+}
+
+#logo {
+    width: 215px;
+    margin-top: 1-;
+    margin-top: 6px;
+    margin-left: 100px;
+    height: 64px;
 }
