--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 	width: 100%
 }
 
-.content {
+.wrapper {
 
 }
 
@@ -77,7 +77,7 @@ background-size: 100% 600px;
 
 .donatebutton1 {
 	font-family: font-family: 'Oxygen', sans-serif;
-	font-style: ;
+	font-style: bold;
 	border: solid;
 	position: relative;
 	color: white;
@@ -108,3 +108,4 @@ background-size: 100% 600px;
 	background-color: #ee4c85;
 	border-color: #ee4c85;
 }
+
