--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ height: auto;
 z-index: -100;
 -webkit-transform: translateX(-50%) translateY(-50%);
 transform: translateX(-50%) translateY(-50%);
-background: url(ADD HERE) no-repeat;
+background: url(http://blogs.bootsnall.com/corrieguatemala/files/2008/07/100_0181.JPG) no-repeat;
 background-size: 100% 600px;
 }
 
