--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
 body {
-	width: 100%
+	width: 100%;
 }
 .audioplayer {
 	position: relative;
@@ -13,12 +13,20 @@ body {
 .wrapper {
 
 }
-
-#Nav {
+ 
+#navTop {
 	width: 100%;
 	height: 75px;
 	background-color: #191919;
 	position: ;
+}
+
+#navBot {
+	width: 100%;
+	height: 75px;
+	background-color: #191919;
+	position: fixed;
+	bottom: 0;
 }
 
 #Index {
@@ -26,10 +34,9 @@ body {
 }
 
 #logo {
-    width: 215px;
-    margin-top: 1-;
+    width: 200px;
     margin-top: 6px;
-    margin-left: 100px;
+    margin-left: 50px;
     height: 64px;
     webkit-animation:fadeIn ease-in 1;
 	moz-animation:fadeIn ease-in 1;
@@ -53,7 +60,7 @@ min-height: 100%;
 width: auto;
 height: auto;
 z-index: -100;
--webkit-transform: translateX(-50%) translateY(-50%);
+ -webkit-transform: translateX(-50%) translateY(-50%);
 transform: translateX(-50%) translateY(-50%);
 background: url(ADD HERE) no-repeat;
 background-size: 100% 600px;
@@ -90,10 +97,7 @@ background-size: 100% 600px;
 	left: 40%;
 	border-radius: 50px;
 	font-size: 35px;
-	padding-left: 70px;
-    padding-right: 70px;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    padding: 5px 70px 5px 70px;
      webkit-animation:fadeIn ease-in 1;
 	moz-animation:fadeIn ease-in 1;
 	animation:fadeIn ease-in 1;
