--- a/style.css
+++ b/style.css
@@ -53,6 +53,15 @@ body {
 	animation-duration:1s;
 }
 
+#Indextext3{
+text-align:center;
+color:white;
+border-color:  #8AC007; 
+
+}
+
+
+
 video#bgvid {
 position: fixed;
 top: 50%;
@@ -86,6 +95,28 @@ background-size: 100% 600px;
 	moz-animation-duration:1s;
 	animation-duration:1s;
 }
+
+#Indextext1{
+font-family: 'Oxygen', sans-serif;
+	color: white;
+	font-size: 60px;
+    margin-top: 5px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+#Indextext2{
+font-family: 'Oxygen', sans-serif;
+	color:white;
+	font-size: 30px;
+	text-align:center;
+
+   
+    
+    #indextext3{
+    text-align:center; 
+    }
 
 ul.nav a {
 	padding-top:30px;
