--- a/style.css
+++ b/style.css
@@ -40,7 +40,22 @@ ul.nav a {
     display: block;
 }
 
+#welcometext {
+	text-align:center;
+	font-size: 29px;
+	color:white;
+}
 
+#baby{
+
+	float:center;
+    font-size:30px
+    margin-top: 6px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: "Copperplate Gothic Light", sans-serif;
+}
 
 .wrapper {
 
@@ -129,7 +144,7 @@ video#bgvid {
 	background-color: #E91660;
 	border-radius: 50px;
 	font-size: 35px;
-    padding: 5px 70px 5px 70px;
+    padding: 5px 65px 5px 70px;
     display: block;
      webkit-animation:fadeIn ease-in 1;
 	moz-animation:fadeIn ease-in 1;
