--- a/style.css
+++ b/style.css
@@ -45,10 +45,7 @@ ul.nav a {
 	color:white;
 }
 
-#set{
-	float:center;
-	color: white;
-}
+
 
 .wrapper {
 
@@ -93,6 +90,15 @@ ul.nav a {
 	animation-duration:1s;
 }
 
+#link{
+ margin-top: 6px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 35px;
+    font-family: "Copperplate Gothic Light";
+}
+
 video#bgvid {
 	position: fixed;
 	top: 50%;
@@ -113,7 +119,7 @@ video#bgvid {
 	color: white;
 	font-size: 60px;
 	text-align: center;
-	margin-top: 250px;
+	margin-top: 95px;
 	 webkit-animation:fadeIn ease-in 1;
 	moz-animation:fadeIn ease-in 1;
 	animation:fadeIn ease-in 1;
@@ -131,7 +137,7 @@ video#bgvid {
 	font-family:'Oxygen', sans-serif;
 	font-style: bold;
 	border: solid;
-	margin: 0 auto;
+	margin: auto;
 	color: white;
 	border-color: #E91660;
 	background-color: #E91660;
@@ -153,6 +159,7 @@ video#bgvid {
 }
 
 .donatebutton1:hover {
+
 	background-color: #ee4c85;
 	border-color: #ee4c85;
 }
